syntax = "proto3";
package grpc_web.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins/grpc_web";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/gloo/projects/gloo/api/v1/plugins/transformation/parameters.proto";

// GrpcWeb support is enabled be default. Use this extension to disable it.
message GrpcWeb {
  // Disable grpc web supoort.
  bool disable = 1;
}